# competitive

./: .gitignore  CMakeLists.txt  gcjtask.template  origtask.template  run.template  submission.template  task.template  tc.template
arch/: TALCA.cpp  TaskA.cpp  applejack.cpp  balenie.cpp  batohy.cpp  bobuzly.cpp  commuting.cpp  crabbles.cpp  days.cpp  dominofall.cpp  expectation.cpp  fenwick.cpp  fewswaps.cpp  genbits.cpp  godfather.cpp  goldtri.cpp  gridgame.cpp  hayfeast.cpp  hrozostrasne.cpp  hyperkocka.cpp  inner.cpp  jedy.cpp  just.cpp  kamienky.cpp  karavana1.cpp  karty.cpp  kolace.cpp  kormidelnici.cpp  lcsinv.cpp  maxprod.cpp  maxtri.cpp  mazoretky.cpp  megainversions.cpp  mikbanan.cpp  mikcesta.cpp  miniplanar.cpp  mst.cpp  muffiny.cpp  multiples.cpp  omrvinky.cpp  (+39 more)
l/: Notes  avl.h  bigint.h  blossom.h  bridges.h  chull.h  closest.h  consttree.h  crt.h  delaunay.h  dinic.h  eertree.h  envelope.h  fact.h  fenwick.h  fft.h  flow.h  frac.h  geo.h  graph.h  hungary.h  int128.h  lib.h  matrix.h  mincostmaxflow.h  mod.h  nsegtree.h  primes.h  random.h  runtimemod.h  segtree.h  sspa.h  string.h  subset.h  suffixarray.h  tree.h  util.h
tasks/: F.cpp  TaskD.cpp  alch.cpp  bitsofmerryengland.cpp  bittorrent.cpp  buildstring.cpp  complroute.cpp  dicecube.cpp  dominodraw.cpp  doubleprofiles.cpp  druidi.cpp  familytree.cpp  ff.cpp  fleacircus.cpp  grippingstory.cpp  harmonious.cpp  hranaruby.cpp  iglooskyscraper.cpp  johnny.cpp  litpanels.cpp  littleelephantandstrings.cpp  lostborn.cpp  miktycinky.cpp  minhra.cpp  minimaxtri.cpp  minresult.cpp  mostyprec.cpp  ohrad.cpp  (+9 more)
(+1451 files in other folders)
